28 September 2006: Wouter
	- Removed unused global variable current_region,
	  and routines for it in region-allocator.c and .h.
	- Added recycle option to regions. It will keep track of small
	  objects in a recycle bin. Large objects are deallocated.
	  No calls to recycle yet, unit test it first.
	- added unit test for region recycle.

27 September 2006: Wouter
	- Further suggestion from Koh-ichi Ito, I've set opt->xfrdfile
	  to XFRDFILE in options_create. So opt->xfrdfile and opt->difffile
	  are never NULL. This simplifies code elsewhere.
	  And also handles chroot case (+=l) for default values.
	- Fix for bug #145. The skip file position in the diff file was used
	  inconsistently - one part of the code skipped to before the 'IXFR'
	  type code and another part skipped to after that. Now all skip to
	  before the type code. This bug only happens if your diff file 
	  is like: zone1_part1, zone2_part_1, zone1_part2, zone1_commit,
	    zone2_part2, zone2_commit. The skip over zone1_part1 failed.
	- tpkg test in long dir that tests for the bugfix. Takes a long time
	  and uses ldns-testns feature to wait partway through an AXFR.
	- removed debug log of strerror on diff read failure, when the errno
	  was already output to the logfile (resulting in a nonsense error).

26 September 2006: Wouter
	- NSD compiles on Solaris 10 with the sun cc compiler.
	  Added a define for _STDC_C99 for that.
	- Checked that the patch for solaris for bug 143 indeed fixes the bug.
	- Fixed bug #146 reported by Koh-ichi Ito: when chrooted nsd failed
	  to write xfrdfile/difffile.
	
18 September 2006: Wouter
	- no queries for NSEC3, RRSIG, ANY succeed for nsec3 only domains.

15 September 2006: Wouter
	- Fixed LOC parsing of integer overflow causing maximum values.
	  Added to test and backported fix to 2.3.6.
	- NSEC3 qtype queries get noerror/nodata or nxdomain answers.
	  You can query for NSEC3PARAM.
	- warnings for printf format on maxOS (sizet needs cast to int).
