@@ -293,7 +293,6 @@ namedb_open (const char *filename, nsd_options_t* opt, size_t num_children)
 	db->filename = region_strdup(db->region, filename);
 	db->crc = 0xffffffff;
 	db->diff_skip = 0;
-	db->memchurn = 0;
 	
 	/* Open it... */
 	db->fd = fopen(db->filename, "r");
