@@ -649,9 +649,12 @@ server_reload(struct nsd *nsd, region_type* server_region, netio_type* netio,
 			log_msg(LOG_ERR, "unable to load the diff file: %s", nsd->options->difffile);
 			exit(1);
 	}
-	log_msg(LOG_INFO, "memory churn is %d bytes wasted", (int)nsd->db->memchurn);
 	log_msg(LOG_INFO, "memory recyclebin holds %lu bytes", (unsigned long)
 		region_get_recycle_size(nsd->db->region));
+#ifndef NDEBUG
+	if(nsd_debug_level >= 1)
+		region_log_stats(nsd->db->region);
+#endif
 #ifdef NSEC3
 	for(zone= nsd->db->zones; zone; zone = zone->next) {
 		if(zone->updated)
