@@ -1,3 +1,7 @@
+29 September 2006: Wouter
+	- recyclebin works, added a test that uses it (about 3 Mb goes
+	  through the recyclebin). This resolves bug #147.
+
 28 September 2006: Wouter
 	- Removed unused global variable current_region,
 	  and routines for it in region-allocator.c and .h.
